--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.3.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "1.8.4-preview",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.device-simulator": "3.1.0-preview",
     "com.unity.ide.rider": "3.0.18",
